syntax = "proto3";

package pools;

import "cloud/disk_manager/internal/pkg/types/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/pools/protos";

////////////////////////////////////////////////////////////////////////////////

message DeletePoolRequest {
    string ImageId = 1;
    string ZoneId = 2;
}

message DeletePoolTaskState {
    DeletePoolRequest Request = 1;
}
